; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_movsbl_indexed_map.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_movsbl_indexed_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"movsbl %x(%%%s,%%%s,4),%%%s\0A\00", align 1
@regname = common dso_local global i32* null, align 8
@ESP = common dso_local global i32 0, align 4
@EBP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_movsbl_indexed_map(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @emit_movsbl_indexed(i32 %12, i32 %13, i32 %14)
  br label %77

16:                                               ; preds = %4
  %17 = load i32, i32* %5, align 4
  %18 = load i32*, i32** @regname, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** @regname, align 8
  %24 = load i32, i32* %7, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** @regname, align 8
  %29 = load i32, i32* %8, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @assem_debug(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %22, i32 %27, i32 %32)
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* @ESP, align 4
  %36 = icmp ne i32 %34, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @assert(i32 %37)
  %39 = call i32 @output_byte(i32 15)
  %40 = call i32 @output_byte(i32 190)
  %41 = load i32, i32* %5, align 4
  %42 = icmp eq i32 %41, 0
  br i1 %42, label %43, label %53

43:                                               ; preds = %16
  %44 = load i32, i32* %6, align 4
  %45 = load i32, i32* @EBP, align 4
  %46 = icmp ne i32 %44, %45
  br i1 %46, label %47, label %53

47:                                               ; preds = %43
  %48 = load i32, i32* %8, align 4
  %49 = call i32 @output_modrm(i32 0, i32 4, i32 %48)
  %50 = load i32, i32* %7, align 4
  %51 = load i32, i32* %6, align 4
  %52 = call i32 @output_sib(i32 2, i32 %50, i32 %51)
  br label %76

53:                                               ; preds = %43, %16
  %54 = load i32, i32* %5, align 4
  %55 = icmp slt i32 %54, 128
  br i1 %55, label %56, label %67

56:                                               ; preds = %53
  %57 = load i32, i32* %5, align 4
  %58 = icmp sge i32 %57, -128
  br i1 %58, label %59, label %67

59:                                               ; preds = %56
  %60 = load i32, i32* %8, align 4
  %61 = call i32 @output_modrm(i32 1, i32 4, i32 %60)
  %62 = load i32, i32* %7, align 4
  %63 = load i32, i32* %6, align 4
  %64 = call i32 @output_sib(i32 2, i32 %62, i32 %63)
  %65 = load i32, i32* %5, align 4
  %66 = call i32 @output_byte(i32 %65)
  br label %75

67:                                               ; preds = %56, %53
  %68 = load i32, i32* %8, align 4
  %69 = call i32 @output_modrm(i32 2, i32 4, i32 %68)
  %70 = load i32, i32* %7, align 4
  %71 = load i32, i32* %6, align 4
  %72 = call i32 @output_sib(i32 2, i32 %70, i32 %71)
  %73 = load i32, i32* %5, align 4
  %74 = call i32 @output_w32(i32 %73)
  br label %75

75:                                               ; preds = %67, %59
  br label %76

76:                                               ; preds = %75, %47
  br label %77

77:                                               ; preds = %76, %11
  ret void
}

declare dso_local i32 @emit_movsbl_indexed(i32, i32, i32) #1

declare dso_local i32 @assem_debug(i8*, i32, i32, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @output_byte(i32) #1

declare dso_local i32 @output_modrm(i32, i32, i32) #1

declare dso_local i32 @output_sib(i32, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
